tests/invalid_programs/types/bind_int_to_string.duck
fn x() {
    let x: String = 5;
}
